# HILglebone

./: .gitignore  .gitmodules  bbb-usb-connect.sh  yocto-env.sh
backend/: .dockerignore  .env.example  .env.prod.example  Dockerfile  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum
backend/cmd/server/: main.go
backend/infra/nats/: nats.conf  setup-streams.sh
backend/internal/bus/: bus.go
backend/internal/config/: config.go
backend/internal/db/: pool.go
backend/internal/devices/: auth.go  handler.go  service.go
backend/internal/firmware/: handler.go  service.go  storage.go
backend/internal/httpx/: json.go
backend/internal/natspub/: publisher.go
backend/internal/natssub/: subscriber.go
backend/internal/server/: server.go
backend/internal/sessions/: handler.go  service.go
backend/internal/ws/: handler.go
backend/migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql
backend/scripts/: gen-proto.sh
bbb/: pyproject.toml  setup-env.sh
bbb/comms/: __init__.py  backend_client.py  nats_client.py  stm_link.py
bbb/hilglebone/: _GENERATED.md
bbb/hilglebone/v1/: command_pb2.py  command_pb2.pyi  common_pb2.py  common_pb2.pyi  ota_pb2.py  ota_pb2.pyi  status_pb2.py  status_pb2.pyi  telemetry_pb2.py  telemetry_pb2.pyi
bbb/orchestrator/: __init__.py  __main__.py  agent.py  command_bridge.py  heartbeat.py  ota_bridge.py  response_bridge.py  state.py
bbb/protocol/: __init__.py  constants.py  crc.py  dac.py  digital_io.py  encoder.py  frame.py  i2c.py  parser.py  pwm.py
bbb/scripts/: gen-proto.sh  setup-env.sh
docs/backend/infra/: nats-streams.md
docs/beagle_app/: stm-link.md
docs/build-pipeline/: stm32-build-pipeline.md
docs/embedded_linux/: linux-image.md  yocto-overview.md
docs/firmware/: clock-tree.md
docs/firmware/build-pipeline/: stm32-build-pipeline.md
docs/firmware/debugging/: gdb.md
docs/hardware/beaglebone-black/: am335x-sitara-soc.md  beaglebone-black-board.md
docs/hardware/stm32f401re/: nucleo-f401re-board.md  stm32f401re-mcu.md
docs/protocol/: crc16.md  dac-spec.md  digital-io-spec.md  i2c-sensors-spec.md  protocol-spec.md  pwm-spec.md  spi-sensors-spec.md
proto/hilglebone/v1/: command.proto  common.proto  ota.proto  status.proto  telemetry.proto
protocol/: i2c-sensors-spec.md
scripts/: dev-bootstrap.sh
stm32/: CMakeLists.txt  STM32_FLASH.ld
stm32/cmake/: arm-none-eabi.cmake  stm32_target.cmake
stm32/include/: FreeRTOSConfig.h  app_init.h  clock.h  crc16.h  helpers.h  protocol.h  sensor_manager.h
stm32/project/app/: CMakeLists.txt
stm32/project/app/inc/: clock.h
stm32/project/app/src/: app_init.c  clock.c
stm32/project/command/: CMakeLists.txt
stm32/project/command/inc/: dispatcher.h
stm32/project/command/src/: dispatcher.c
stm32/project/drivers/: CMakeLists.txt
stm32/project/drivers/gpio/: CMakeLists.txt
stm32/project/drivers/gpio/inc/: gpio.h  gpio_regs.h
stm32/project/drivers/gpio/src/: gpio.c
stm32/project/drivers/i2c_slave/: CMakeLists.txt
stm32/project/drivers/i2c_slave/inc/: i2c_slave.h
stm32/project/drivers/i2c_slave/src/: i2c_slave.c
stm32/project/drivers/spi/: CMakeLists.txt
stm32/project/drivers/spi/inc/: spi.h
stm32/project/drivers/spi/src/: spi.c
stm32/project/drivers/spi_master/: CMakeLists.txt
stm32/project/drivers/spi_master/inc/: spi_master.h
stm32/project/drivers/spi_master/src/: spi_master.c
stm32/project/drivers/spi_slave/: CMakeLists.txt
stm32/project/drivers/spi_slave/inc/: spi_slave.h
stm32/project/drivers/spi_slave/src/: spi_slave.c
stm32/project/drivers/timer/: CMakeLists.txt
stm32/project/drivers/timer/inc/: hw_timer.h
stm32/project/drivers/timer/src/: hw_timer.c
stm32/project/drivers/uart/: CMakeLists.txt
stm32/project/drivers/uart/inc/: uart.h
stm32/project/drivers/uart/src/: uart.c
stm32/project/protocol/: CMakeLists.txt
stm32/project/protocol/inc/: protocol.h  protocol_encoder.h  protocol_parser.h
stm32/project/protocol/src/: protocol_encoder.c  protocol_parser.c
stm32/project/shared/: CMakeLists.txt
stm32/project/shared/inc/: err_codes.h  helpers.h  stm32_clk.h
stm32/project/simulate/: CMakeLists.txt
stm32/project/simulate/dac/: CMakeLists.txt
stm32/project/simulate/dac/inc/: dac_sensor.h
stm32/project/simulate/dac/src/: dac_sensor.c
stm32/project/simulate/digital_out/: CMakeLists.txt
stm32/project/simulate/digital_out/inc/: digital_out_pulse_timer.h  digital_out_sensor.h
stm32/project/simulate/digital_out/src/: digital_out_pulse_timer.c  digital_out_sensor.c
stm32/project/simulate/i2c/: CMakeLists.txt
stm32/project/simulate/i2c/inc/: i2c_sensor.h
stm32/project/simulate/i2c/src/: i2c_sensor.c
stm32/project/simulate/pwm/: CMakeLists.txt
stm32/project/simulate/pwm/inc/: pwm_sensor.h
stm32/project/simulate/pwm/src/: pwm_sensor.c
stm32/project/simulate/spi_slave/: CMakeLists.txt
stm32/project/simulate/spi_slave/inc/: spi_slave_sensor.h
stm32/project/simulate/spi_slave/src/: spi_slave_sensor.c
stm32/src/: main.c
stm32/src/app/: app_init.c
stm32/src/command/: digital_out_sensor.c  dispatcher.c  i2c_sensor.c  sensor_manager.c
stm32/src/protocol/: crc16.c  protocol_parser.c
tests/hardware/: test_hardware_integration.py
yocto/meta-hilglebone/conf/: layer.conf
yocto/meta-hilglebone/conf/templates/default/: bblayers.conf.sample  conf-notes.txt  local.conf.sample
yocto/meta-hilglebone/recipes-bsp/device-tree/: hilglebone-uart-overlay.bb
yocto/meta-hilglebone/recipes-bsp/device-tree/files/: hilglebone-uart-overlay.dts
yocto/meta-hilglebone/recipes-bsp/u-boot/: u-boot-bb.org_%.bbappend
yocto/meta-hilglebone/recipes-bsp/usb-gadget-net/: usb-gadget-net.bb
yocto/meta-hilglebone/recipes-bsp/usb-gadget-net/files/: 80-usb0.network  g_ether.conf  g_ether.options
yocto/meta-hilglebone/recipes-core/images/: hilglebone-image.bb
yocto/meta-hilglebone/recipes-hilglebone/hilglebone-orchestrator/: hilglebone-orchestrator.bb
yocto/meta-hilglebone/recipes-hilglebone/hilglebone-orchestrator/files/: hilglebone.service
yocto/templates/: bblayers.conf.sample
