[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hilglebone-bbb"
version = "0.1.0"
description = "BeagleBone Black agent for the HILglebone HIL platform"
requires-python = ">=3.11"

dependencies = [
    "nats-py>=2.6",      # NATS JetStream client
    "pyserial>=3.5",     # STM32 UART bridge
    "httpx>=0.27",       # HTTP client to the cloud backend
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
# bbb/ is the source root — packages are imported as `protocol`, `comms`, etc.
sources = ["."]
packages = ["protocol", "comms", "orchestrator", "log_setup", "scenarios"]

# ── Ruff ──────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]   # line length enforced by formatter, not linter

# ── Mypy ──────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
files = ["protocol", "comms", "orchestrator", "log_setup", "scenarios"]

# ── Pytest ────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests/bbb"]
